--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
           src="./assets/avatar.png"
           alt="sasuke"
         />
-        <p>@maykbrito</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -49,7 +48,7 @@
       </div>
 
       <footer>
-        Feito com ♥
+        Nesta vida seremos eternos aprendizes 👽 🏁
       </footer>
     </div>
 
