--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <footer>
-        Nesta vida seremos eternos aprendizes 👽 🏁
+        👽 O poder de acreditar em si mesmo. Esse vai ser o poder que vai mudar o destino. Esse é meu jeito Dev. 🐱‍👤🏁
       </footer>
     </div>
 
